<resources>
    <string name="app_name">SpotifyApp</string>
    <string name="explicit">EXPLICIT</string>
    <string name="arrow">&#9660;</string>
    <string name="dot">&#8226;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="playing">Playing:</string>
    <string name="toolbar_title">MY TOP HITS</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="album">Album: </string>
</resources>
