<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/recycler_padding"
    android:paddingTop="@dimen/recycler_padding"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recycler_text_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Song Title"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/color_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_explicit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recycler_text_margin"
                android:background="@drawable/explicit"
                android:paddingStart="@dimen/recycler_text_margin"
                android:paddingEnd="@dimen/recycler_text_margin"
                android:text="@string/explicit"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="@dimen/download_width"
                android:layout_height="@dimen/download_height"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/recycler_text_margin"
                android:gravity="center"
                android:background="@drawable/download"
                android:text="@string/arrow"
                android:textColor="@color/color_download"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recycler_text_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Author"
                android:textColor="@color/color_text"/>

            <TextView
                android:id="@+id/tv_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recycler_text_margin"
                android:text="@string/dot"
                android:textColor="@color/color_text"/>

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Album Name"
                android:textColor="@color/color_text"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>