<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.etasheva.spotifyapp.fragments.SongFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_paying"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.25"
                android:text="@string/playing"
                android:textColor="@color/color_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title"
                android:id="@+id/txt_title"
                android:textColor="@color/color_text"/>

            <TextView
                android:id="@+id/tv_current_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:text="Song Title"
                android:layout_marginStart="@dimen/songView_margin_start"
                android:textColor="@color/color_text"
                android:textSize="@dimen/songView_text_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/author"
                android:id="@+id/txt_author"
                android:textColor="@color/color_text" />

            <TextView
                android:id="@+id/tv_current_author"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:text="Author"
                android:layout_marginStart="@dimen/songView_margin_start"
                android:textColor="@color/color_text"
                android:textSize="@dimen/songView_text_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/album"
                android:id="@+id/txt_album"
                android:textColor="@color/color_text" />

            <TextView
                android:id="@+id/tv_current_album"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:text="Album"
                android:layout_marginStart="@dimen/songView_margin_start"
                android:textColor="@color/color_text"
                android:textSize="@dimen/songView_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_play"
                    android:layout_width="@dimen/buttons_player_size"
                    android:layout_height="@dimen/buttons_player_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/buttons_player_margins"
                    android:background="@drawable/play_icon" />

                <Button
                    android:id="@+id/btn_rewind"
                    android:layout_width="@dimen/buttons_player_size"
                    android:layout_height="@dimen/buttons_player_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/buttons_player_margins"
                    android:background="@drawable/rewind_icon" />

                <Button
                    android:id="@+id/btn_forward"
                    android:layout_width="@dimen/buttons_player_size"
                    android:layout_height="@dimen/buttons_player_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/buttons_player_margins"
                    android:background="@drawable/forward_icon" />

                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="@dimen/buttons_player_size"
                    android:layout_height="@dimen/buttons_player_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/buttons_player_margins"
                    android:background="@drawable/stop_icon" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
